[tool.poetry]
name = "telebot-values"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "telebot_values"}]

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
